<resources>
    <string name="app_name">Not Today Sun</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="Home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Settings">Settings</string>
    <string name="Favorites">Favorites</string>


    <string name="temperature_format">%.1f%s</string>
    <string name="wind_speed_format">%.1f %s</string>

    <string name="InitialSetup">Initial Setup</string>
    <string name="LocationOptions">Location Options</string>
    <string name="Map">Map</string>
    <string name="GPS">GPS</string>
    <string name="Notifications">Notifications</string>
    <string name="Enable">Enable</string>
    <string name="Done">Done</string>
    <string name="Save">Save</string>
    <string name="Alarm">Alarm</string>
    <string name="From">From</string>
    <string name="To">To</string>
    <string name="Location">Location</string>
    <string name="Temperature">Temperature</string>
    <string name="Language">Language</string>
    <string name="WindSpeed">Wind Speed</string>
    <string name="Disable">Disable</string>
    <string name="Delete">Delete</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="Celsius">Celsius</string>
    <string name="Fahrenheit">Fahrenheit</string>
    <string name="Kelvin">Kelvin</string>
    <string name="meter">m/s</string>
    <string name="mph">mph</string>
    <string name="NotTodaySun">Not Today, Sun!</string>
    <string name="Note">Note</string>
    <string name="note">Use Celsius and Kelvin with meters per second for metric consistency, and Fahrenheit with miles per hour for imperial consistency.</string>
    <string name="Humidity">Humidity</string>
    <string name="Wind">Wind</string>
    <string name="Pressure">Pressure</string>
    <string name="Clouds">Clouds</string>

</resources>