<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"
            android:name="com.example.not_today_sun.home.view.HomeFragment"
            tools:layout="@layout/fragment_home" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_fav"
            android:name="com.example.not_today_sun.fav.view.favFragment"

            android:title="@string/Favorites" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_alarm"
            android:title="Notification" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/Settings" />
    </group>
</menu>