<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.not_today_sun.home.view.HomeFragment"
        android:label="@string/Home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_fav"
        android:name="com.example.not_today_sun.fav.view.FavFragment"
        android:label="@string/Favorites">
        <action
            android:id="@+id/action_nav_fav_to_mapFragment"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/nav_fav"
            app:popUpToInclusive="false" />
        <action
            android:id="@+id/action_nav_fav_to_locationWeatherFragment"
            app:destination="@id/locationWeatherFragment" />
    </fragment>
    <fragment
        android:id="@+id/mapFragment"
        android:name="com.example.not_today_sun.OSM.SimpleMapFragment"
        android:label="Select Location" />

    <fragment
        android:id="@+id/initialSetupFragment"
        android:name="com.example.not_today_sun.InitialSetup.InitialSetupFragment"
        android:label="Initial Setup">
        <action
            android:id="@+id/action_initialSetupFragment_to_simpleMapFragment"
            app:destination="@id/mapFragment"
            app:popUpTo="@id/initialSetupFragment"
            app:popUpToInclusive="false" />
    </fragment>

    <fragment
        android:id="@+id/locationWeatherFragment"
        android:name="com.example.not_today_sun.fav.view.LocationWeatherFragment"
        android:label="Location Weather">
    </fragment>

    <fragment
        android:id="@+id/nav_notification"
        android:name="com.example.not_today_sun.notification.view.NotificationFragment"
        android:label="@string/Notifications"

        tools:layout="@layout/fragment_notification" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.not_today_sun.settings.view.SettingsFragment"
        android:label="@string/Settings"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settingsFragment_to_simpleMapFragment"
            app:destination="@id/simpleMapFragment" />
    </fragment>
    <fragment
        android:id="@+id/simpleMapFragment"
        android:name="com.example.not_today_sun.OSM.SimpleMapFragment"
        tools:layout="@layout/fragment_simple_map" />

</navigation>