<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="489dp"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/plainblue"
        tools:layout_editor_absoluteX="-39dp"
        tools:layout_editor_absoluteY="-50dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/luckiest_guy"
        android:text="@string/InitialSetup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="413dp"
        android:layout_height="510dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="-15dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.897">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/locationLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/LocationOptions"
                android:textColor="@color/blue"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/gpsCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="64dp"
                android:button="@drawable/circle_checkbox_selector"
                android:fontFamily="@font/luckiest_guy"
                android:paddingStart="40dp"
                android:text="GPS"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@+id/mapCheckBox"
                app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

            <CheckBox
                android:id="@+id/mapCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="50dp"
                android:button="@drawable/circle_checkbox_selector"
                android:fontFamily="@font/luckiest_guy"
                android:paddingStart="40dp"
                android:text="Map"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

            <TextView
                android:id="@+id/notificationsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="Notifications"
                android:textColor="@color/blue"
                android:textSize="34sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gpsCheckBox" />

            <CheckBox
                android:id="@+id/NotificationCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="132dp"
                android:button="@drawable/circle_checkbox_selector"
                android:fontFamily="@font/luckiest_guy"
                android:paddingStart="40dp"
                android:text="Enable"
                android:textColor="@color/blue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationsLabel" />

            <Button
                android:id="@+id/okButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/Done"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>